
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int HGLOBAL ;
typedef int BYTE ;


 int CF_TEXT ;
 int GMEM_MOVEABLE ;
 int GlobalAlloc (int ,size_t const) ;
 int GlobalLock (int ) ;
 int GlobalUnlock (int ) ;
 int SetClipboardData (int ,int ) ;
 int* malloc (unsigned int) ;
 int memcpy (int ,int*,size_t const) ;
 int memset (int*,int,unsigned int) ;

void AllocateClipBoard2(unsigned int size) {
 BYTE *buffer;
 buffer = malloc(size);
 memset(buffer, 0x41, size);
 buffer[size - 1] = 0x00;
 const size_t len = size;
 HGLOBAL hMem = GlobalAlloc(GMEM_MOVEABLE, len);
 memcpy(GlobalLock(hMem), buffer, len);
 GlobalUnlock(hMem);


 SetClipboardData(CF_TEXT, hMem);


}
