; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows_x86-64/local/extr_41020.c_AllocateClipBoard2.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows_x86-64/local/extr_41020.c_AllocateClipBoard2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GMEM_MOVEABLE = common dso_local global i32 0, align 4
@CF_TEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AllocateClipBoard2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32* @malloc(i32 %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @memset(i32* %8, i32 65, i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* %2, align 4
  %13 = sub i32 %12, 1
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %11, i64 %14
  store i32 0, i32* %15, align 4
  %16 = load i32, i32* %2, align 4
  %17 = zext i32 %16 to i64
  store i64 %17, i64* %4, align 8
  %18 = load i32, i32* @GMEM_MOVEABLE, align 4
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @GlobalAlloc(i32 %18, i64 %19)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @GlobalLock(i32 %21)
  %23 = load i32*, i32** %3, align 8
  %24 = load i64, i64* %4, align 8
  %25 = call i32 @memcpy(i32 %22, i32* %23, i64 %24)
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @GlobalUnlock(i32 %26)
  %28 = load i32, i32* @CF_TEXT, align 4
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @SetClipboardData(i32 %28, i32 %29)
  ret void
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @GlobalAlloc(i32, i64) #1

declare dso_local i32 @memcpy(i32, i32*, i64) #1

declare dso_local i32 @GlobalLock(i32) #1

declare dso_local i32 @GlobalUnlock(i32) #1

declare dso_local i32 @SetClipboardData(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
